--- a/Banking.ipynb
+++ b/Banking.ipynb
@@ -955,7 +955,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x217309820f0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca256741d0>"
       ]
      },
      "execution_count": 7,
@@ -1002,7 +1002,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x21732f002b0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca26a7c1d0>"
       ]
      },
      "execution_count": 9,
@@ -1764,7 +1764,7 @@
     "# subset the features selected by rfe_15\n",
     "col_10 = X_train.columns[rfe_10.support_]\n",
     "\n",
-    "# subsetting training data for 15 selected columns\n",
+    "# subsetting training data for 10 selected columns\n",
     "X_train_rfe_10 = X_train[col_10]\n",
     "\n",
     "# add a constant to the model\n",
@@ -1788,8 +1788,8 @@
       "Dep. Variable:              euribor3m   R-squared:                       0.994\n",
       "Model:                            OLS   Adj. R-squared:                  0.994\n",
       "Method:                 Least Squares   F-statistic:                 4.945e+05\n",
-      "Date:                Sun, 20 Jan 2019   Prob (F-statistic):               0.00\n",
-      "Time:                        18:35:32   Log-Likelihood:                 17449.\n",
+      "Date:                Wed, 30 Jan 2019   Prob (F-statistic):               0.00\n",
+      "Time:                        12:08:16   Log-Likelihood:                 17449.\n",
       "No. Observations:               28831   AIC:                        -3.488e+04\n",
       "Df Residuals:                   28820   BIC:                        -3.479e+04\n",
       "Df Model:                          10                                         \n",
@@ -1828,7 +1828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1919,30 +1919,119 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['month_jun', 'month_oct', 'month_sep', 'cons_price_idx', 'nr_employed'], dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
-    "# # RFE with 5 features\n",
-    "# from sklearn.feature_selection import RFE\n",
+    "# RFE with 5 features\n",
+    "from sklearn.feature_selection import RFE\n",
     "\n",
-    "# lm = LinearRegression()\n",
-    "# rfe_5 = RFE(lm, n_features_to_select =20, step=1)\n",
+    "lm = LinearRegression()\n",
+    "rfe_5 = RFE(lm, n_features_to_select =5, step=1)\n",
     "\n",
-    "# # fit with 5 features\n",
-    "# rfe_5.fit(X_train, y_train)\n",
+    "# fit with 5 features\n",
+    "rfe_5.fit(X_train, y_train)\n",
     "\n",
-    "# col_5 = X_train.columns[rfe_5.support_]\n",
-    "# print(col_5)"
+    "col_5 = X_train.columns[rfe_5.support_]\n",
+    "print(col_5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# X_train_rfe_5 = X_train[col_5]\n",
-    "# lm_5 = sm.OLS(y_train, X_train_rfe_5).fit()\n",
-    "# lm_5.summary()"
+    "X_train_rfe_5 = X_train[col_5]\n",
+    "X_train_rfe_5 = sm.add_constant(X_train_rfe_5) #when ever you are using OLS always add a constant to the data.\n",
+    "lm_5 = sm.OLS(y_train, X_train_rfe_5).fit()\n",
+    "lm_5.summary()\n",
+    "\n",
+    "X_train2 = X_train[col_5] #I have changed the training variable because X_train_rfe_5 contains a constant variable which will give error.\n",
+    "X_test_rfe_5 = X_test[col_5]\n",
+    "\n",
+    "lm.fit(X_train2,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3121448146417512"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred = lm.predict(X_test_rfe_5)\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "lm_mse = mean_squared_error(y_test, y_pred)\n",
+    "lm_rmse = np.sqrt(lm_mse)\n",
+    "lm_rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.631040923782654"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.628843246742839"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test.mean()"
    ]
   },
   {
